# mame-parser

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: format-and-test.yml
examples/: download_file.rs  download_files.rs  download_mame_file_progress.rs  download_multi_progress.rs  download_nplayers_file.rs  read_file.rs  read_files.rs  remove_machines_by_category.rs  remove_machines_by_filter.rs  unpack_file.rs  unpack_files.rs  write_csv.rs  write_json.rs  write_sqlite.rs
examples/download_files/: download_file.rs  download_files.rs
src/: lib.rs
src/core/: callback_progress.rs  mame_data_types.rs  mod.rs  models.rs
src/core/data_cleanup/: machine_filtering.rs  machine_names_normalization.rs  manufacturers_normalization.rs  mod.rs  name_normalization.rs  nplayers_normalization.rs
src/core/data_management/: file_downloader.rs  file_reader.rs  file_unpacker.rs
src/core/downloader/: file_downloader.rs
src/core/fetch_unpack/: file_downloader.rs  file_reader.rs  file_unpacker.rs  mod.rs
src/core/file_handling/: file_downloader.rs  file_reader.rs  file_unpacker.rs  file_writer.rs  mod.rs
src/core/filters/: machine_names_normalization.rs  manufacturers_normalization.rs  mod.rs  nplayers_normalization.rs
src/core/models/: callback_progress.rs  collections_helper.rs  core_models.rs  mame_data_types.rs  mod.rs
src/core/readers/: catver_reader.rs  history_reader.rs  languages_reader.rs  mame_reader.rs  mod.rs  nplayers_reader.rs  resources_reader.rs  series_reader.rs
src/core/writers/: csv_writer.rs  json_writer.rs  mod.rs  sqlite_writer.rs
src/helpers/: callback_progress_helper.rs  data_source_helper.rs  file_system_helpers.rs  mod.rs
tests/: 01_download_file_test.rs  02_download_files_test.rs  05_read_file_test.rs  06_read_files_test.rs  07_remove_machines_by_filter_test.rs  08_remove_machines_by_category_test.rs  09_write_csv_test.rs  10_write_json_test.rs  11_write_sqlite_test.rs  download_file_test.rs  download_files_test.rs  unpack_file_test.rs  unpack_files_test.rs
