[package]
name = "mame-parser"
version = "0.1.0"
authors = ["Ruben Sosenke <rsosenke@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "Library to read and write MAME files"
license = "MIT"
repository = "https://github.com/retro-arcade-games/mame-parser"
documentation = "https://docs.rs/mame-parser"
homepage = "https://github.com/retro-arcade-games/mame-parser"
keywords = ["mame", "parser", "arcade", "rust"]
categories = ["parsing", "games", "serialization"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
regex = "1.5.4"
url = "2.2"
walkdir = "2.3.2"
zip = "0.5.13"
sevenz-rust = "0.6.1"
quick-xml = "0.23"
lazy_static = "1.4"
docify = "0.2.8"

[dev-dependencies]
indicatif = "0.16"

[[example]]
name = "download_file"
path = "examples/download_file.rs"

[[example]]
name = "download_files"
path = "examples/download_files.rs"

[package.metadata.docs.rs]
no-deps = true
