[package]
name = "mame-parser"
version = "0.7.1"
authors = ["Ruben Sosenke <rsosenke@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "Library to read and write MAME files"
license = "MIT"
repository = "https://github.com/retro-arcade-games/mame-parser"
documentation = "https://docs.rs/mame-parser"
keywords = ["mame", "parser", "arcade", "games", "retro"]
categories = ["parsing", "games"]
exclude = [
    ".gitignore",
    ".vscode",
    ".github",
    "tests",
    "target",
    "*.md",
]

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
regex = "1.5.4"
url = "2.2"
walkdir = "2.3.2"
zip = "0.5.13"
sevenz-rust = "0.6.1"
quick-xml = "0.23"
lazy_static = "1.4"
docify = "0.2.8"
anyhow = "1.0.86"
rusqlite = "0.31.0"
csv = "1.3.0"
serde_json = "1.0.128"

[dev-dependencies]
indicatif = "0.16"

[package.metadata.docs.rs]
no-deps = true
